--- a/Original/contribute.html
+++ b/Original/contribute.html
@@ -1,18 +1,6 @@
-# Перевод "Руководство содействия"
-
-------
-
-Оригинал смотри: https://golang.org/doc/contribute.html
-
-
-`go version go1.8.3 linux/amd64`
-
-# Оглавление
-------
-
-
-------
-
+<!--{
+	"Title": "Contribution Guide"
+}-->
 
 <p>
 The Go project welcomes all contributors. The process of contributing
